# Pygments_Kappa_plugin

./: KappaLexer.py  KappaStyle.py  LICENSE  README.md  pyproject.toml  regenerate_sample_images.sh  setup.cfg  setup.py
core/: KaTieLexer.py  KaTieStyle.py  KaTieToken.py  KappaLexer.py  KappaStyle.py  KappaToken.py
example_files/: kappa_comprehensive.ka  kappa_edit_notation.ka  katie_big_wnt_query.katie
