[metadata]
name = Pygments_Kappa_plugin
version = 0.2
author = Hector Medina
author_email = hector.f.medina.a@gmail.com
description =  Plugin for Pygments to highlight Kappa.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmedina/Pygments_Kappa_plugin
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Environment :: Plugins
	Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >= 3.6
install_requires = 
	Pygments >= 2.5.1

